--- a/index.html
+++ b/index.html
@@ -28,18 +28,34 @@
                 <option value="astropath">Astropath</option>
                 <option value="sensei">Sensei</option>
                 <option value="xenobreed">Xenobreed</option>
+                <option value="sanctioned_psyker">Sanctioned Psyker</option>
+                <option value="ratling">Ratling</option>
+                <option value="ogryn">Ogryn</option>
+                <option value="squat">Squat</option>
+                <option value="felinid">Felinid</option>
+                <option value="blank">Blank</option>
             </select>
             
             <select id="career-select">
                 <option value="random">Random Career</option>
-                <option value="arch-militant">Arch-Militant</option>
+                <option value="arch_militant">Arch-Militant</option>
                 <option value="explorator">Explorator</option>
                 <option value="missionary">Missionary</option>
                 <option value="navigator">Navigator</option>
                 <option value="rogue_trader">Rogue Trader</option>
                 <option value="seneschal">Seneschal</option>
-                <option value="void-master">Void-Master</option>
+                <option value="void_master">Void-Master</option>
                 <option value="astropath_transcendent">Astropath Transcendent</option>
+                <option value="chirurgeon">Chirurgeon</option>
+                <option value="enginseer">Enginseer</option>
+                <option value="commissar">Commissar</option>
+                <option value="inquisitorial_acolyte">Inquisitorial Acolyte</option>
+                <option value="administratum_scribe">Administratum Scribe</option>
+                <option value="tech_wright">Tech-Wright</option>
+                <option value="void_born_mystic">Void-Born Mystic</option>
+                <option value="xenographer">Xenographer</option>
+                <option value="sanctioned_witch">Sanctioned Witch</option>
+                <option value="death_cult_assassin">Death Cult Assassin</option>
             </select>
             
             <select id="power-level-select">
